Update to Autumn 2023 manifesto

--- a/manifesto.css
+++ b/manifesto.css
@@ -1,5 +1,5 @@
 .page {
-	width: 21cm;
+	width: 23cm;
 	height: 29.7cm;
 	margin: 1cm auto;
 	border: 1px #D3D3D3 solid;
@@ -21,7 +21,7 @@
 }
 
 .front-page > img {
-	size: A4;
+	size: 230mm 297mm;
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -31,35 +31,35 @@
 	display: none;
 }
 
-#save-the-planet-header {
-	background-image: url("headers/save-the-planet.png");
+#economic-security-header {
+	background-image: url("headers/economic-security.png");
 }
 
-#fight-for-workers-header {
-	background-image: url("headers/fight-for-workers.png");
+#public-services-header {
+	background-image: url("headers/public-services.png");
 }
 
-#distribute-power-header {
-	background-image: url("headers/distribute-power.png");
+#sustainable-growth-header {
+	background-image: url("headers/sustainable-growth.png");
 }
 
-#save-lives-header {
-	background-image: url("headers/save-lives.png");
+#trust-the-public-header {
+	background-image: url("headers/trust-the-public.png");
 }
 
-#build-a-better-britain-header {
-	background-image: url("headers/build-a-better-britain.png");
+#accountability-header {
+	background-image: url("headers/accountability.png");
 }
 
 div.back-page {
-	background-color: #660066;
+	background-color: #008080;
 	height: 100%;
 }
 
 
 .back-page > img {
 	width: 15cm;
-	margin: calc((29.7cm - 15cm - 10em)/2) calc((21cm - 15cm)/2) calc((29.7cm - 15cm - 10em)) calc((21cm - 15cm)/2 - 1.5em);
+	margin: calc((29.7cm - 15cm - 10em)/2) calc((21cm - 15cm)/2) calc((29.7cm - 15cm - 10em)) calc((21cm - 15cm)/2);
 }
 
 .back-page > footer {
@@ -71,11 +71,11 @@ div.back-page {
 }
 
 .five-points-page {
-	background-color: #660066;
+	background-color: #008080;
 }
 
 .five-points-page > * {
-	background-color: #660066;
+	background-color: #008080;
 }
 
 /* HEADER */
@@ -88,7 +88,7 @@ header {
 	color: white;
 }
 
-header > h1 {
+header > h1, h2 {
 	font-size: 3em;
 	position: absolute;
 	bottom: 0;
@@ -96,7 +96,8 @@ header > h1 {
 
 .leader-page > header {
 	height: 100px;
-	color: #660066;
+	color: #008080;
+	padding-left: 64px !important;
 }
 
 .leader-page > header > h1 {
@@ -104,16 +105,36 @@ header > h1 {
 	bottom: initial;
 }
 
-.front-page > header > h1, h2 {
+.front-page h1, h2 {
 	position: initial;
-	color: #660066;
+	color: #00a0a0;
 	text-transform: uppercase;
 	text-align-last: center;
 	margin: 1cm auto 0 auto;
+	font-family: "Bebas Neue";
+	text-shadow: 0 0 6px black;
+}
+
+
+
+.front-page > header > h1 {
+	font-size: 10em;
+}
+
+.front-page > footer > h2 {
+	font-size: 5em;
+}
+
+.front-page > header {
+	height: 22.275cm;
+}
+
+.front-page h2 {
+	font-size: 1.5em;
 }
 
 .manifesto-content > header {
-	padding-left: 1em;
+	padding-left: calc(1em + 2cm/3);
 }
 
 .five-points-page > header {
@@ -129,7 +150,6 @@ header > h1 {
 /* CONTENT */
 
 .content-page > header > h2 {
-	margin-top: 0;
 	color: white;
 	position: absolute;
 	bottom: 0;
@@ -144,7 +164,7 @@ content {
 	font-family: "Nunito Sans";
 	text-align: justify;
 	text-justify: inter-word;
-	padding: 0 1em;
+	padding: 0 calc(1em + 2cm/3);
 }
 
 .manifesto-content > content {
@@ -154,7 +174,8 @@ content {
 
 .content-page > content {
 	columns: 2;
-  	column-gap: 1em;
+  	column-gap: calc(1em + 2cm/3);
+	column-fill: auto;
   	padding-top: 1em;
 }
 
@@ -163,6 +184,7 @@ content {
 	width: 11cm;
 	display: block;
 	columns: initial;
+	padding-left: 4em;
 }
 
 
@@ -181,20 +203,26 @@ content {
 }
 
 .five-points-page > content {
-	height: calc(3*29.7cm/4 - 31px);
+	height: calc(29.7cm - 36px);
 	color: white;
 	columns: 1;
+	text-align: justify;
+	text-align-last: center;
+}
+
+.five-points-page p {
+	font-size: 2em;
+	padding: 0 1em;
 }
 
 #five-points-list {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
+	padding-left: 5em;
+	padding-right: 5em;
 }
 
-#five-points-list > li {
-	font-size: 4em;
-	text-align: center;
+#five-points-list li {
+	font-size: 1.3em;
+	margin: 10px 0;
 }
 
 /* FOOTER */
@@ -205,7 +233,7 @@ content {
 	display: block;
 	margin: 0 auto;
 	text-align: center;
-	background-color: #660066;
+	background-color: #008080;
 	color: white;
 	top: 0.5em;
 	padding-bottom: 12px;
@@ -222,13 +250,13 @@ content {
 }
 
 @page {
-	size: A4;
+	size: 230mm 297mm;
 	margin: 0;
 }
 
 @media print {
 	html, body {
-		width: 210mm;
+		width: 230mm; 
 		height: 297mm;
 	}
 	.page {
@@ -249,3 +277,4 @@ content {
 		background-image: none;
 	}
 }
+
